# Road-Sign-DB

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  traffic_sign_classification_cnn.py
database_convertion/: AnalysisADT.py  DATASET.csv  base_dataset.py  bmykhaylivvv.py  features_description.txt  file_operation.py  main.py  mykhailo_bondarenko.py
database_convertion/datasets/: .gitattributes
database_convertion/examples/: file_operation.py
doc/doctrees/: database_convertion.doctree  environment.pickle  index.doctree  modules.doctree
doc/html/: .buildinfo  database_convertion.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_sources/: database_convertion.rst.txt  index.rst.txt  modules.rst.txt
examples/: AnalysisADT.py  DATASET.csv  README.md  base_dataset.py  bmykhaylivvv.py  mykhailo_bondarenko.py
src/database_convertion/: AnalysisADT.py  DATASET.csv  __init__.py  __main__.py  base_dataset.py  bmykhaylivvv.py  features_description.txt  main.py  mykhailo_bondarenko.py  stefan.py
tests/: AnalysisADTTest.py
tests/test_utils/: test_dataset.csv
