[metadata]
# replace with your username:
name = database-convertion-for-road-signs-michael
version = 0.0.1
author = Road-Sign-UCU
author_email = work.michael.2956@gmail.com
description = A database collection & conversion package which performs analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Road-Sign-UCU/Road-Sign-DB
project_urls =
    Bug Tracker = https://github.com/Road-Sign-UCU/Road-Sign-DB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
