[metadata]
# replace with your username:
name = road-signs-db-convertion-michael
version = 0.0.4
author = Road-Sign-UCU
author_email = work.michael.2956@gmail.com
description = A database collection & conversion package which performs analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Road-Sign-UCU/Road-Sign-DB
project_urls =
    Bug Tracker = https://github.com/Road-Sign-UCU/Road-Sign-DB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi>=2020.12.5
    chardet>=4.0.0
    cycler>=0.10.0
    idna>=2.10
    kiwisolver>=1.3.1
    matplotlib>=3.4.2
    numpy>=1.20.3
    opencv-python>=4.5.2.52
    Pillow>=8.2.0
    pyparsing>=2.4.7
    python-dateutil>=2.8.1
    requests>=2.25.1
    six>=1.16.0
    urllib3>=1.26.4

[options.packages.find]
where = src
